Closed Bug 210934 Opened 22 years ago Closed 19 years ago

Option to use Moz to open MNGs even though MNG support dropped

Categories

(SeaMonkey :: UI Design, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dalangalma, Assigned: mozilla)

Details

Attachments

(1 file, 2 obsolete files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030516 Mozilla Firebird/0.6 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030516 Mozilla Firebird/0.6 There is still an option in preferences/advanced/system to use Moz as the default handler for MNGs, even though it can't decode them any more. Reproducible: Always Steps to Reproduce: 1. 2. 3.
Confirming new, 2003062708 PC/WinXP
Status: UNCONFIRMED → NEW
Ever confirmed: true
This should be a bug? Why, Mozilla doesn't support it offically, so why should there a ption to open MNG with Mozilla? A XPI could do such a thing, but Mozilla should not...i'm for resolving invalid in this case, but that's a modul owner thing.
===== This should be a bug? Why, Mozilla doesn't support it offically, so why should there a ption to open MNG with Mozilla? ===== You just answered your own question. MNG support was removed but the pref to make Mozilla the default for opening MNG files was not.
Ups, sorry, missunderstood that bug, ok :)
changed OS and Hardware to "all"
OS: Windows XP → All
Hardware: PC → All
seems like an xp apps issue to me.
Assignee: law → jaggernaut
Component: File Handling → XP Apps
QA Contact: petersen → paw
Product: Core → Mozilla Application Suite
See bug 305435 which removed the UI. Note bug 305435 comment 8.
The only file of those listed in comment 5 which still has MNG left is xpfe/components/winhooks/nsWindowsHooks.cpp. Is that going away with suiterunner or will it be copied to suite/? If it isn't going to be copied, then this bug could be marked WFM now that bug 18574 is finally WONTFIXed..
(In reply to comment #9) > The only file of those listed in comment 5 which still has MNG left is > xpfe/components/winhooks/nsWindowsHooks.cpp. Is that going away with > suiterunner or will it be copied to suite/? If it isn't going to be copied, > then this bug could be marked WFM now that bug 18574 is finally WONTFIXed.. AFAIK we will be keeping winhooks when we move to suiterunner. Therefore we will still need to remove the support from that file.
Attached patch First try (obsolete) — Splinter Review
It's a bit weird for me to make this patch because I don't have a Windows environment to try to compile it on. But even if I had I could probably not test it as it currently does not seem to get built on trunk at all (winhooks is not listed in any Makefile.in as it still was on the 1.8 branch). Anyway, this patch takes the naive approach, it should work...
Assignee: jag → mozilla
Status: NEW → ASSIGNED
(In reply to comment #11) > But even if I had I could probably not > test it as it currently does not seem to get built on trunk at all (winhooks is > not listed in any Makefile.in as it still was on the 1.8 branch). I think you'll find it here: http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/xpfe/components/Makefile.in&rev=1.96&mark=109#107
Yeah, thanks for helping a blind man. ;-) I was searching for the filename winhooks instead of the string on LXR...
The patch looks OK to me.
Attachment #260170 - Flags: superreview?(neil)
Attachment #260170 - Flags: review?(cst)
Right, this now includes those, too.
Attachment #260170 - Attachment is obsolete: true
Attachment #260271 - Flags: superreview?(neil)
Attachment #260271 - Flags: review?(cst)
Attachment #260170 - Flags: superreview?(neil)
While searching for more stuff to remove, I also found one mention of MNG in xpfe/bootstrap/macbuild/Contents/Info.plist.in. Not sure what that file is used for, though, I have no clue at all about Mac...
Attachment #260271 - Flags: superreview?(neil) → superreview+
(In reply to comment #17) > While searching for more stuff to remove, I also found > one mention of MNG in xpfe/bootstrap/macbuild/Contents/Info.plist.in. Not sure > what that file is used for, though, I have no clue at all about Mac... > It can be removed. iirc, suiterunner uses suite/app/macbuild/Contents/Info.plist.in :-) http://developer.apple.com/documentation/Cocoa/Conceptual/Documents/Concepts/DocTypePList.html
I ment that the MNG stuff in the file could be removed, not the file
This adds stefanh's recommendation to remove the mng doctype on Mac. Carrying over reviews. I will get this checked in whenever I have a few hours where I can really watch the tinderboxes, but I wouldn't be too unhappy if someone beats me to it...
Attachment #260271 - Attachment is obsolete: true
Attachment #262561 - Flags: superreview+
Attachment #262561 - Flags: review+
(In reply to comment #20) > Created an attachment (id=262561) [details] > v3, also remove mng from mac > > This adds stefanh's recommendation to remove the mng doctype on Mac. Carrying > over reviews. I will get this checked in whenever I have a few hours where I > can really watch the tinderboxes, but I wouldn't be too unhappy if someone > beats me to it... I like tidy ups (and had to check something else in) so I've checked this in on Peter's behalf. I also incorporated the change from comment 21, and also generated a new uuid for the nsIWindowsHooksSettings change. I'll keep an eye on the trees - hopefully they'll stay green ;-) and let Peter mark this fixed when he's happy.
Yes, I don't see a problem with it. Thanks Mark!
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: