Bug 210934 Option to use Moz to open MNGs even though MNG support dropped. p=Peter Weilbacher <mozilla%Weilbacher.org>,r=cst,sr=neil